# omspy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tutorial.md  tutorial.py
.github/workflows/: codeql.yml
docs/: .gitkeep  api.md  index.md
docs/reference/: base.md  models.md  multi.md  omspy.md  order.md  utils.md
docs/reference/algos/: trailing.md
docs/reference/brokers/: api_helper.md  finvasia.md  icici.md  neo.md  noren.md  paper.md  zerodha.md
docs/reference/orders/: depth.md  peg.md  stop.md
docs/reference/simulation/: models.md  server.md  virtual.md
omspy/: base.py  models.py  multi.py  order.py  utils.py
omspy/algos/: README.md  __init__.py  straddle.py  trailing.py
omspy/brokers/: __init__.py  api_helper.py  finvasia.py  finvasia.yaml  fyers.py  fyers.yaml  icici.py  icici.yaml  kotak.py  kotak.yaml  master_trust.py  master_trust.yaml  neo.py  neo.yaml  noren.py  noren.yaml  paper.py  paper.yaml  zerodha.py  zerodha.yaml
omspy/orders/: __init__.py  composite.py  depth.py  peg.py  stop.py
omspy/simulation/: __init__.py  models.py  server.py  virtual.py
tests/: test_base.py  test_models.py  test_models_candles.py  test_models_tracker.py  test_multi.py  test_omspy.py  test_order.py  test_order_strategy.py  test_utils.py
tests/algos/: test_straddle.py  test_trailing.py
tests/brokers/: test_finvasia.py  test_fyers.py  test_fyers_deprecation.py  test_icici.py  test_kotak.py  test_master_trust_deprecation.py  test_neo.py  test_noren.py  test_paper.py  test_zerodha.py
tests/data/: .nifty_ticks.csv.swp  credentials.yaml  fyers.json  icici.json  kotak_cash.csv  kotak_cash_named.csv  kotak_neo.json  kotak_orders.json  kotak_orders2.json  kotak_positions.json  nifty_candles_2min.csv  nifty_ticks.csv  real_orders.csv
tests/data/finvasia/: orders.json  positions.json  trades.json
tests/data/kiteconnect/: README.md  basket_margins.json  generate_session.json  gtt_get_order.json  gtt_get_orders.json  gtt_modify_order.json  holdings.json  margin_commodity.json  margins.json  margins_equity.json  mf_order_response.json  mf_orders.json  mf_orders_info.json  mf_sip_info.json  order_response.json  order_trades.json  orders.json  quote.json  trades.json
tests/orders/: .test_stop.py.swp  test_depth.py  test_peg.py  test_stop.py
tests/simulation/: test_models.py  test_server.py  test_virtual.py
