[tool.poetry]
name = "omspy"
version = "0.16.4"
description = ""
license = "MIT"
authors = ["Ubermensch <uberdeveloper001@gmail.com>"]
readme = "README.md"
repository = "https://github.com/uberdeveloper/omspy"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "<3.0.0"
pydantic = "^1.8.2"
PyYAML = "^6.0.0"
sqlite-utils = "^3.22.1"

[tool.poetry.group.server.dependencies]
fastapi = "^0.92.0"

[tool.poetry.group.test.dependencies]
coverage = "^6.0.2"
pytest = "^5.2"
pytest-watch = "^4.2.0"
pre-commit = "^2.17.0"
httpx = "^0.23.3"

[tool.poetry.group.brokers.dependencies]
pyotp = "^2.6.0"
kiteconnect = "^5.0.0"
requests = "^2.25.0"
requests-oauthlib = "^1.3.1"
ks-api-client = {git = "https://github.com/osparamatrix/ks-orderapi-python.git"}
pandas = "^1.4.2"
nodriver = "^0.37"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
